Style the form for initials

--- a/style.css
+++ b/style.css
@@ -9,3 +9,9 @@
   .btn {
       cursor: pointer;
   }
+
+  .submit-initials {
+      text-align: center;
+      display: inline-block;
+      margin: auto;
+      }
